# Technical_Test_Infog2

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: c1c69264b67d_initial.py
src/: __init__.py
src/adapter/: schema.py
src/adapter/controllers/: client.py  user.py
src/adapter/repository/: client.py  order.py  product.py  public.py  user.py
src/core/domain/user/: __init__.py
src/infra/config/: __init__.py
src/infra/database/: sql.py
src/infra/enums/: order.py  user.py
src/infra/models/: __init__.py  client.py  image.py  order.py  order_item.py  product.py  user.py
src/interfaces/routers/: __init__.py
src/interfaces/routers/auth/: __init__.py  register.py
src/interfaces/routers/clients/: __init__.py
src/interfaces/routers/orders/: __init__.py
src/interfaces/routers/products/: __init__.py
src/interfaces/schema/: auth.py  client.py  order.py  product.py  token.py
src/interfaces/validator/: __init__.py
src/ports/public/: __init__.py
src/security/: __init__.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/clients/: test_client.py
tests/orders/: test_order.py
tests/products/: test_product.py
